@@ -107,12 +107,12 @@
 2252,0xd5,   ,  0, 1,1000,enemy, 0x022	//RA_VERDURETRAP
 2253,0xd6,   ,  0, 1,1000,enemy, 0x002	//RA_FIRINGTRAP
 2254,0xd7,   ,  0, 1,1000,enemy, 0x002	//RA_ICEBOUNDTRAP
-2443,0xdf,   ,  0, 1,1000,enemy, 0x008	//SO_FIREWALK
+2443,0xdc,   ,  0, 1,1000,enemy, 0x008	//SO_FIREWALK
 2444,0xdd,   ,  0, 1,1000,enemy, 0x008	//SO_ELECTRICWALK
 2446,0x86,   ,  0, 7:7:7:9:9,1000,enemy,0x000	//SO_EARTHGRAVE
 2447,0x86,   ,  0, 7:7:7:9:9,1000,enemy,0x000	//SO_DIAMONDDUST
 2449,0x86,   ,  0, 7:7:9:9:11,1000,enemy,0x000	//SO_PSYCHIC_WAVE
-2450,0x86,   ,  3, 1,1000,enemy,0x000	//SO_CLOUD_KILL
+2450,0xe0,   ,  0, 1,1000,enemy,0x000	//SO_CLOUD_KILL
 2452,0x86,   ,  0, 7,1000,friend,0x000	//SO_WARMER
 2453,0x86,   ,  0, 7,1000,enemy,0x000	//SO_VACUUM_EXTREME
 2479,0xe5,   ,  0, 1,1000,enemy, 0x000	//GN_THORNS_TRAP
