@@ -707,15 +707,14 @@ enum si_type {
 	SI_CASH_PLUSONLYJOBEXP = 312,
 //	SI_PARTYFLEE = 313,
 //	SI_ANGEL_PROTECT = 314,
-
 // 315
 	SI_ENCHANTBLADE = 316,
 	SI_DEATHBOUND = 317,
 	SI_NAUTHIZ = 318,
-	SI_THURISAZ = 319,
+	SI_TURISUSS = 319,
 	SI_HAGALAZ = 320,
-	SI_ISA = 321,
-	SI_OTHILA = 322,
+	SI_ISHA = 321,
+	SI_EISIR = 322,
 	SI_URUZ = 323,
 	SI_BERKANA = 324,
 	SI_RAIDO = 325,
@@ -725,119 +724,129 @@ enum si_type {
 // 329
 	SI_ORATIO = 330,
 // 331-332
-	SI_POISONSMOKECLOAKINGEXCEED = 333,	// For whatever reason they share the same SI. [LimitLine]
-	SI_HALLUCINATIONWALK,
+	SI_POISONINGWEAPON = 333, //used to be the SI of Cloaking Exceed and Poison Smoke.
+	SI_HALLUCINATIONWALK = 334,
 // 335
 	SI_RENOVATIO = 336,
-	SI_WEAPONBLOCKING,
+	SI_WEAPONBLOCKING = 337,
 // 338
 	SI_ROLLINGCUTTER = 339,
 // 340
-	SI_POISONINGWEAPON = 341,
-	SI_TOXIN,
-	SI_PARALIZE,
-	SI_VENOMBLEED,
-	SI_MUSHROOM,
-	SI_DISHEART,
-	SI_PYREXIA,
-	SI_OBLIVIONCURSE,
-	SI_LEECHEND,
-	SI_DUPLELIGHT,
-	SI_FREEZING,
-	SI_FEARBREEZE,
+	SI_PARALYSIS = 341, //used to be the SI of Poisoning Weapon and Paralysis
+	SI_TOXIN = 342,
+//	SI_PARALYSIS_2 = 343,
+	SI_FATIGUE = 344,
+	SI_LAUGHING = 345,
+	SI_DISHEART = 346,
+	SI_PYREXIA = 347,
+	SI_OBLIVION = 348,
+	SI_LEECH = 349,
+	SI_DUPLELIGHT = 350,
+	SI_FREEZING = 351,
+	SI_FEARBREEZE = 352,
 // 353
 	SI_MARSHOFABYSS = 354,
-	SI_RECOGNIZEDSPELL,
+	SI_RECOGNIZEDSPELL = 355,
 // 356
 	SI_WOLFMOUNT = 357,
-	SI_WUGDASH,
+	SI_WOLFDASH = 358,
 // 359
 	SI_CAMOUFLAGE = 360,
-	SI_ACCELERATION,
-	SI_HOVERING,
-	SI_SPHERE_1,
-	SI_SPHERE_2,
-	SI_SPHERE_3,
-	SI_SPHERE_4,
-	SI_SPHERE_5,
+	SI_ACCELERATION = 361,
+	SI_HOVERING = 362,
+	SI_SPHERE_1 = 363,
+	SI_SPHERE_2 = 364,
+	SI_SPHERE_3 = 365,
+	SI_SPHERE_4 = 366,
+	SI_SPHERE_5 = 367,
 // 368-372
 	SI_OVERHEAT = 373,
-	SI_SHAPESHIFT,
-	SI_INFRAREDSCAN,
+	SI_SHAPESHIFT = 374,
+	SI_INFRAREDSCAN = 375,
 // 376
 	SI_NEUTRALBARRIER = 377,
 // 378
 	SI_STEALTHFIELD = 379,
-// 380-384
+// 380
+//	SI_EFST_ATK_1 = 381,
+//	SI_EFST_DEF_1 = 382,
+//	SI_EFST_ATK_2 = 383,
+//	SI_EFST_DEF_2 = 384,
 	SI_REPRODUCE = 385,
-// 386-389
+//	SI_EFST_MATK_1 = 386,
+//	SI_EFST_MATK_2 = 387,
+//	SI_FOOD_STR = 388,
+//	SI_FOOD_INT = 389,
 	SI_REFLECTDAMAGE = 390,
-// 391-392
+	SI_FORCEOFVANGUARD = 391,
+// 392
 	SI_AUTOSHADOWSPELL = 393,
 	SI_SHADOWFORM = 394,
 // 395
 	SI_SHIELDSPELL_1 = 396,
-	SI_SHIELDSPELL_2,
-	SI_SHIELDSPELL_3,
-	SI_BODYPAINTING,
+	SI_SHIELDSPELL_2 = 397,
+	SI_SHIELDSPELL_3 = 398,
+	SI_BODYPAINTING = 399,
 // 400
-	SI_DECREASEAGI_2 = 401,
-	SI_PRESTIG,
-	SI_INVISIBILITY,
-	SI_DIMENSIONDOOR, // Is it really Dimension Door? [LimitLine]
-	SI_BANDING,
-	// 406
+//	SI_DECREASEAGI_2 = 401,
+	SI_PRESTIGE = 402,
+	SI_INVISIBILITY = 403,
+	SI_DEADLYINFECT = 404,
+	SI_BANDING = 405,
+// 406
 	SI_INSPIRATION = 407,
-	SI_MASQUERADE, // [pakpil]
+	SI_MASQUERADE = 408, // [pakpil]
 // 409
 	SI_RAISINGDRAGON = 410,
-// 411-413
+// 411-412
+	SI_LIGHTNINGWALK = 413,
 	SI_EXPIATIO = 414,
 // 415
 	SI_BLACKCHAR = 416,	// Black char. I'm almost sure it's a Shadow Chaser skill, though it could be any of them. Maybe Body Painting? [LimitLine]
 // 417-420
 	SI_STRIPACCESSORY = 421,
-	SI_MANHOLE,
-	SI_FATALMENACE,
-// 424
-	SI_GT_ENERGYGAIN = 425,
-	SI_GT_CHANGE,
-	SI_GT_REVITALIZE,
+	SI_MANHOLE = 422,
+// 423-424
+	SI_ENERGYGAIN = 425,
+	SI_CHANGE = 426,
+	SI_REVITALIZE = 427,
 // 428
 	SI_SWINGDANCE = 429,
-	SI_SYMPHONY,
+	SI_SYMPHONYOFLOVERS = 430,
 // 431-433
-	SI_SOMETHINGLIKERED = 434,
-	SI_DEEPSLEEP,
-	SI_SIRCLEOFNATURE, // May as well be Song of Mana. Need to confirm this. [LimitLine]
-	SI_COLD, // Need to figure out what it is. [LimitLine]
-	SI_SATURDAYNIGHT,	// I don't know, wild guess. [LimitLine]
-	SI_SONGOFMANA, // May as well be Circle of Nature. Need to confirm this. [LimitLine]
+	SI_VOICEOFSIREN = 434,
+	SI_DEEPSLEEP = 435,
+	SI_SIRCLEOFNATURE = 436,
+	SI_COLDSLOWER = 437,
+	SI_GLOOMYDAY = 438,
+	SI_SONGOFMANA = 439,
 // 440
-	SI_DANCEWITHWUG = 441, // Guess. [LimitLine]
-	SI_ECHO,
-	SI_WINDMILL,
-	SI_HARMONIZE,
-// 445-446
+	SI_DANCEWITHWUG = 441,
+	SI_RUSHWINDMILL = 442,
+	SI_ECHOSONG = 443,
+	SI_HARMONIZE = 444,
+	SI_STRIKING = 445,
+	SI_WARMER = 446,
 	SI_MOONLITSERENADE = 447,
-	SI_MINWAND, // Need to figure out what it is. [LimitLine]
+	SI_SATURDAYNIGHTFEVER = 448,
 // 449
 	SI_ANALYZE = 450,
-	SI_LERADSDEW,
-	SI_WARCRYOFBEYOND,
-	SI_MELODYOFSINK,
-	SI_HUMMINGVOICE,
+	SI_LERADSDEW = 451,
+	SI_MELODYOFSINK = 452,
+	SI_WARCRYOFBEYOND = 453,
+	SI_UNLIMITEDHUMMINGVOICE = 454,
 // 455
 	SI_SPELLBOOK_1 = 456,
 	SI_SPELLBOOK_2 = 457,
 // 458-460
-	SI_GN_CARTBOOST = 461,
+	SI_CARTSBOOST = 461,
 // 462
-	SI_WALLOFTHORN = 463,
-	SI_BLOODSUCKER,
-//  SI_LIKEBERSERK,
+	SI_THORNTRAP = 463,
+	SI_BLOODSUCKER = 464,
+//  SI_LIKEBERSERK = 465,
 //  466-471
 	SI_SECRAMENT = 472,
+//	SI_ASSUMPTIO_2 = 473,
 };
 
 enum wl_spheres {
